syntax = "proto3";

message AreaDetail {
    string _id = 1;
    string area_name = 2;
}


service AreaService {
    rpc GetAllAreas (Empty) returns (AreaList) {}
    rpc CreateArea (AreaDetail) returns (AreaDetail) {}
}

message Empty {}

message AreaList {
    repeated AreaDetail areas = 1;
}




