syntax = "proto3";

message AreaDetail {
    optional string _id = 1;
    optional string area_name = 2;
    optional string address = 3;
    optional string map_url = 4;
    optional string parent_area = 5;
    optional int32 floor_number = 6;
    optional float lat = 7;
    optional float lng = 8;
    optional string area_type = 9;
    optional int32 floor_level = 10;
}


message CameraMapDetail {
    optional string _id = 1;
    optional string camera_name = 2;
    optional string address = 3;
    optional float lat = 4;
    optional float lng = 5;
    optional string type = 6;
    optional string connect_camera = 7;
    optional string observe_iot = 8;
    optional string area = 9;

}


message CameraDetail {
    optional string _id = 1;
    optional string camera_name = 2;
    optional string status = 3;
    optional string rtsp_stream_url = 4;
    optional string sfu_rtsp_stream_url = 5;
    optional string camera_type = 6;
    optional string event_type = 7;
    optional float offset_x_begin = 8;
    optional float offset_x_end = 9;
    optional float offset_y_begin = 10;
    optional float offset_y_end = 11;
    optional bool is_set_line = 12;
    optional string username = 13;
    optional string password = 14;

    optional string hostname = 15;
    optional int32 port = 16;
    repeated float stream_resolution = 17;
    repeated float iot_event_zone_coords = 18;
    repeated float camera_event_zone_coords = 19;

    repeated float line_crossing_vector = 20;
}


message CameraTypeDetail {
    optional string _id = 1;
    optional string camera_type_name = 2;
    optional string image_url = 3;
    optional string description = 4;
}

message EventDetail {
    optional string _id = 1;
    optional string iot_device = 2;
    optional string camera = 3;
    optional bool ai_true_alarm = 4;
    optional bool human_true_alarm = 5;
    optional string normal_image_url = 6;
    optional string normal_video_url = 7;
    optional string detection_image_url = 8;
    optional string detection_video_url = 9;
    optional string event_time = 10;
    optional string event_status = 11;
    optional string created_at = 12;
    optional string updated_at = 13;
    optional string iot_device_map = 14;
    optional string camera_map = 15;
    optional string comment = 16;
}


message EventTypeDetail {
    optional string _id = 1;
    optional string event_key = 2;
    optional string event_name = 3;
    optional string event_description = 4;
}


message IotDeviceMapDetail {
    optional string _id = 1;
    optional string iot_device_name = 2;
    optional string address = 3;
    optional float lat = 4;
    optional float lng = 5;
    optional string type = 6;
    optional string observed_status = 7;
    optional string connect_iot = 8;
    optional string area = 9;
}


message IotDeviceDetail {
    optional string _id = 1;
    optional string iot_device_name = 2;
    optional int32 zone = 3;
    optional string event_type = 4;
    optional string status = 5;
    optional string iot_device_type = 6;
}

message IotDeviceTypeDetail {
    optional string _id = 1;
    optional string iot_device_type_name = 2;
    optional string image_url = 3;
    optional string description = 4;
}

message UserDetail {
    optional string _id = 1;
    optional string username = 2;
    optional string password = 3;
    optional string role = 4;
}
